vbnc/vbnc/vbnc/tests/Errors/30060-14.vb
Class T
    Const M_String As String = 2US
End Class